--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
         <section class="section" id="booking">
             <div class="form-section">
                 <h2>Book Your Appointment</h2>
-                <form action="https://formspree.io/f/xqkrkgjv" method="POST" enctype="multipart/form-data">
+                <form action="https://formspree.io/f/xqkrkgjv" method="POST" enctype="multipart/form-data" onsubmit="showSpinner()">
                     <input type="text" name="name" placeholder="Your Name" required class="form-control mb-3">
                     <input type="email" name="email" placeholder="Your Email" required class="form-control mb-3">
                     <input type="date" name="date" required class="form-control mb-3" data-display-value="Select Date" data-has-value="false">
