--- a/index.html
+++ b/index.html
@@ -1139,6 +1139,71 @@
                 transform: translateY(-50%);
             }
         }
+
+        /* Updated Mobile Navigation and Font Sizes */
+        @media screen and (max-width: 428px) {
+            /* Navigation */
+            .menu-toggle {
+                left: 20px;
+                right: auto;
+            }
+
+            nav .logo {
+                font-size: 1.4em;
+                margin: 0 auto;
+            }
+
+            nav.active ul {
+                left: 0;
+                padding-left: 0;
+                align-items: flex-start;
+            }
+
+            nav ul li a {
+                font-size: 14px;
+                padding: 12px 20px;
+                margin-left: 0;
+                justify-content: flex-start;
+            }
+
+            /* Font Sizes */
+            .hero h1 {
+                font-size: 28px;
+            }
+            .hero p {
+                font-size: 16px;
+            }
+            .section h2 {
+                font-size: 24px;
+            }
+            .info-section p {
+                font-size: 14px;
+            }
+            .info-section .artist h3 {
+                font-size: 18px;
+            }
+            .gallery-section .gallery-item p {
+                font-size: 14px;
+            }
+            .services-section ul {
+                font-size: 14px;
+            }
+            .faq-section .faq-item h3 {
+                font-size: 16px;
+            }
+            .faq-section .faq-item p {
+                font-size: 14px;
+            }
+            .contact-section p {
+                font-size: 14px;
+            }
+            input, textarea, button {
+                font-size: 14px;
+            }
+            footer p {
+                font-size: 12px;
+            }
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -1152,10 +1217,10 @@
     <!-- Navigation -->
     <nav>
         <div class="container">
-            <div class="logo">InkMaster</div>
             <div class="menu-toggle" onclick="toggleMenu()">
                 <i class="fas fa-bars"></i>
             </div>
+            <div class="logo">InkMaster</div>
             <ul>
                 <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="#booking"><i class="fas fa-calendar-alt"></i> Book</a></li>
